<resources>
    <string name="app_name">Music App</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_albums_hot">Albums hot</string>
    <string name="text_title_details_album">Detail albums</string>
    <string name="text_playlist_detail_num_of_song">Number of songs: %d</string>
    <string name="title_more_albums">More albums</string>
    <string name="hello">Hello</string>
    <string name="hi">hi</string>
    <string name="download">download\n</string>
    <string name="add_to_favorite">favorite</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to play next</string>
    <string name="view_album">View album</string>
    <string name="view_artist">View artist</string>
    <string name="block">Block</string>
    <string name="report_error">Report error</string>
    <string name="view_song_information">View song information</string>
    <string name="text_song_detail_title">Title: %s</string>
    <string name="text_song_detail_artist">Artist %s</string>
    <string name="text_song_detail_album">Album %s</string>
    <string name="text_song_detail_duration">Duration %d</string>
    <string name="text_song_detail_counter">Number of plays: %d</string>
    <string name="text_song_detail_replay_counter">Number of replay %d</string>
    <string name="text_song_detail_favorite_status">Is your favorite song?</string>
    <string name="text_song_detail_year">Publish year: %s</string>
    <string name="text_song_detail_genre">Genre: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">N/A</string>
    <string name="text_song_title">Song_title</string>
    <string name="text_song_artist">Song artist</string>
    <string name="now_playing">Now playing</string>
    <string name="sfsff">sfsff</string>
    <string name="text_more">.....</string>
    <string name="under_line">_ __ _</string>
    <string name="permission_denied">This application can not play music if you don\'t allow it use post notification permission</string>
    <string name="action_agree">Action agree</string>
    <string name="recent">Recent</string>
    <string name="title_favorite">Favorite</string>
    <string name="playlist">Playlist</string>
    <string name="title_recent">Recent songs</string>
    <string name="title_recommended">Recommended songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name_hint">play_list_name</string>
    <string name="title_create_playlist">Create playlist\n</string>
    <string name="action_create">Create</string>
    <string name="error_empty_playlist_name">play list is must not empt</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_playlist_exists">Playlist is exists</string>
    <string name="title_playlist">Play list</string>
    <string name="add_to_playlist_success">Add to playlist success\n</string>
    <string name="add_to_playlist_failed">Add to playlist failed</string>
    <string name="title_playlist_detail">Playlist detail</string>
    <string name="image_button_description">btn search\n</string>
    <string name="title_discovery">Discovery</string>
    <string name="image_desc">fsfsfsdf</string>
    <string name="artist_name">Artist name</string>
    <string name="text_number_subscriber">Number subsriber: %d</string>
    <string name="action_interest">Interest</string>
    <string name="title_artist">Artist</string>
    <string name="title_artist_detail">Artist detail</string>
    <string name="text_artist_name">Artist name: %s</string>
    <string name="text_number_of_interest">Number of interest: %d</string>
    <string name="text_your_interested">Your interested artist: %s</string>
    <string name="title_most_heard">Most heard</string>
    <string name="title_for_you">For you</string>
    <string name="title_song_for_you">Songs for you</string>
</resources>